# mstream

./: .env.example  .env.test.example  .gitignore  Cargo.toml  Dockerfile  EMULATOR_TESTING.md  LICENSE-APACHE  LICENSE-MIT  MCP_TESTING.md  MOCK.md  MONGODB_SETUP.md  Makefile  README.md  TESTING_GUIDE.md  TEST_QUALITY_REPORT.md  TestSummary.md  build.rs  config.toml.dist  create_emulator_res.sh  docker-compose.yml  mstream-config.toml.dist  mstream-config.toml.example  run_all_tests.sh  sample-config.toml  setup_config.sh  start_emulator.sh
.github/workflows/: coverage.yml  rust.yml
benches/: json_schema_bench.rs
db-fixtures/: fixtures.json
docs/: persistence.md  reference.md
docs/openapi/: swagger.yaml
examples/: kafka_to_mongo.toml  mongo_to_kafka.toml
examples/mongo-to-mongo/: README.md  docker-compose.yml  mstream-config.toml
examples/mongo-to-mongo/scripts/: anonymize_orders.rhai
examples/rhai/: README.md
examples/rhai/sample_data/: product_event.json  user_event.json
examples/rhai/scripts/: attribute_enrichment.rhai  data_filter.rhai  json_transform.rhai
local/scripts/: init_replica_set.sh  mongo-keyfile
proptest-regressions/encoding/: xson.txt
scripts/: mongodb_clean_start.sh
src/: api.rs  config.rs  db.rs  lib.rs  main.rs  registry.rs  ui.rs
src/api/: error.rs  logs.rs  mod.rs  types.rs  validation.rs
src/api/handler/: jobs.rs  mod.rs  schema.rs  schemas.rs  services.rs  system.rs  test_gen.rs  test_suites.rs  transform.rs  validate.rs  workspaces.rs
src/checkpoint/: mod.rs
src/cmd/: event_handler.rs  listener.rs  mod.rs  services.rs  stream_listener.rs
src/config/: mod.rs  service_config.rs  system.rs
src/encoding/: avro.rs  framed.rs  mod.rs  other.rs  xson.rs
src/encoding/avro/: mod.rs  types.rs  validate.rs
src/encoding/xson/: mod.rs
src/http/: middleware.rs  mod.rs
src/job_manager/: error.rs  in_memory.rs  mod.rs  mongodb_store.rs
src/kafka/: consumer.rs  mod.rs  producer.rs
src/logs/: layer.rs  mod.rs
src/mcp/: client.rs  http.rs  mod.rs  server.rs
src/middleware/: mod.rs
src/mongodb/: checkpoint.rs  mod.rs  persister.rs  test_suite.rs  workspace.rs
src/provision/: encryption.rs  mod.rs  registry.rs  system.rs
src/pubsub/: mock_server.rs  mod.rs
src/schema/: convert.rs  convert_tests.rs  encoding.rs  introspect.rs  mod.rs  mongo.rs  sanitize.rs
src/sink/: encoding.rs  mod.rs
src/source/: mod.rs
src/testing/: assertions.rs  mod.rs  runner.rs  schema.rs  store.rs
src/workspace/: mod.rs
tests/: integration_test.rs  mock_grpc_server_test.rs  pubsub_emulator_test.rs
tests/setup/: mod.rs
(+28 files in other folders)
