[package]
name = "mstream"
version = "0.6.0"
edition = "2021"
authors = ["Simon Makarski"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.6.1"
apache-avro = "0.14"
anyhow = "1"
tonic = { version = "0.9", features = ["tls", "tls-roots"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8.20"
serde = "1"
serde_derive = "1"
log = "0.4"
pretty_env_logger = "0.4"
gauth = { version = "0.8", features = ["token-watcher"] }
async-trait = "0.1.74"
prost = "0.11"
prost-types = "0.11"
rdkafka = { version = "0.36.2", features = ["ssl"] }

[build-dependencies]
tonic-build = "0.9"
prost-derive = "0.11"

[dev-dependencies]
apache-avro = { version = "0.14", features = ["derive"] }
