[package]
name = "mstream"
version = "0.17.0"
edition = "2021"
authors = ["Simon Makarski"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "3"
apache-avro = "0.14"
anyhow = "1"
tonic = { version = "0.13", features = ["tls-ring", "tls-webpki-roots"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8.20"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
pretty_env_logger = "0.5"
gauth = { version = "0.8", features = ["token-watcher"] }
async-trait = "0.1.74"
prost = "0.13"
prost-types = "0.13"
rdkafka = { version = "0.37", features = ["ssl"] }
futures = "0.3.31"
tokio-stream = "0.1.17"
reqwest = "0.12.15"
rand = "0.9.0"
thiserror = "2.0.12"
url = "2.5.4"

[build-dependencies]
tonic-build = "0.13"
prost-derive = "0.13"

[dev-dependencies]
mockito = "1.7.0"
apache-avro = { version = "0.14", features = ["derive"] }
